Added usr_uart.c for UART communication and Convert from Ascii to KeyScanCode
Tested on:
- BLENano(NRF51822/RAM:32KB) + MK20 USB Board

--- a/pca10028/s110/arm5_no_packs/ble_app_hids_keyboard_s110_pca10028.uvprojx
+++ b/pca10028/s110/arm5_no_packs/ble_app_hids_keyboard_s110_pca10028.uvprojx
@@ -447,6 +447,11 @@
                 </FileArmAds>
               </FileOption>
             </File>
+            <File>
+              <FileName>usr_uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\usr_uart.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
